--- a/classroom/src/app/header/header.component.html
+++ b/classroom/src/app/header/header.component.html
@@ -1,6 +1,5 @@
 <header>
-  <mat-toolbar color="primary" role="heading" class="header"
-    ><!-- color="primary" -->
+  <mat-toolbar color="primary" role="heading" class="header">
     <span>{{ title }} {{ institution }}</span>
     <span class="spacer"></span>
     <div class="assignment">
