--- a/classroom/src/app/boxplot/boxplot.component.scss
+++ b/classroom/src/app/boxplot/boxplot.component.scss
@@ -3,9 +3,6 @@
   display: flex;
   flex-direction: row;
 }
-/*.selected {
-  background-color: pink;
-}*/
 
 .tooltip-icon {
   font-size: small;
@@ -49,4 +46,9 @@
 .model_entry {
   color: blue;
   opacity: 0.4;
+}
+
+::ng-deep .boxplot-tooltip > div{
+  white-space: pre-line;
+  text-align: start;
 }
