--- a/classroom/src/app/layouts/tool-layout/tool-layout.component.html
+++ b/classroom/src/app/layouts/tool-layout/tool-layout.component.html
@@ -1,6 +1,24 @@
 <div class="tool">
-  <app-nav></app-nav>
-  <article class="container">
-    <router-outlet></router-outlet>
-  </article>
-</div>
+  <div class="tool">
+    <nav mat-tab-nav-bar [tabPanel]="tabPanel">
+      <a mat-tab-link routerLink="/boxplot" queryParamsHandling="preserve" routerLinkActive #bprla="routerLinkActive"
+        [active]="bprla.isActive" matTooltip="Corpus Analytics">Box Plot</a>
+      <a mat-tab-link routerLink="/frequency" queryParamsHandling="preserve" routerLinkActive #rrla="routerLinkActive"
+        [active]="rrla.isActive" matTooltip="Category Frequency Analytics">Frequency</a>
+      <a mat-tab-link routerLink="/scatterplot" queryParamsHandling="preserve" routerLinkActive
+        #sprla="routerLinkActive" [active]="sprla.isActive" matTooltip="Compare Categories">Scatter Plot</a>
+      <a mat-tab-link routerLink="/bubble" queryParamsHandling="preserve" routerLinkActive #brla="routerLinkActive"
+        [active]="brla.isActive" matTooltip="Bubble Chart Visualization">Bubble Chart</a>
+      <a mat-tab-link routerLink="/patterns" queryParamsHandling="preserve" routerLinkActive #prla="routerLinkActive"
+        [active]="prla.isActive" matTooltip="Show Categorized Patterns">Patterns</a>
+      <a mat-tab-link *ngIf="is_instructor()" routerLink="/groups" queryParamsHandling="preserve" routerLinkActive
+        #grla="routerLinkActive" [active]="grla.isActive" matTooltip="Generate Groups">Groups</a>
+      <a mat-tab-link *ngIf="is_instructor()" routerLink="/report" queryParamsHandling="preserve" routerLinkActive
+        #rla="routerLinkActive" [active]="rla.isActive" matTooltip="Generate Reports">Reports</a>
+    </nav>
+    <article class="container">
+      <mat-tab-nav-panel #tabPanel>
+        <router-outlet></router-outlet>
+      </mat-tab-nav-panel>
+    </article>
+  </div>
