--- a/classroom/src/app/page-not-found/page-not-found.component.html
+++ b/classroom/src/app/page-not-found/page-not-found.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card appearance="outlined">
   <mat-card-title class="alert-color">Tool Unavailable</mat-card-title>
   <mat-card-content>
     <p class="alert">
