--- a/classroom/src/app/scatterplot/scatterplot.component.scss
+++ b/classroom/src/app/scatterplot/scatterplot.component.scss
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
 }
-::ng-deep .multiline-tooltip {
+::ng-deep .scatter-tooltip > div{
   white-space: pre-line;
+  text-align: start;
 }
