--- a/classroom/src/app/text-view/text-view.component.scss
+++ b/classroom/src/app/text-view/text-view.component.scss
@@ -1,3 +1,5 @@
+@import '../../cmu-app-theme.scss';
+
 .container {
   display: flex;
   flex-direction: row;
@@ -10,11 +12,17 @@
   width: 490px;
 }
 
-.tree ul,
-.tree li {
+.tree-tools {
+  display: flex;
+  flex-direction: row;
+  background-color: $cmu-core-grey;
+}
+.tree {
+  ul, li {
   margin-top: 0;
   margin-bottom: 0;
   list-style-type: none;
+}
 }
 .tree-node {
   display: flex;
