--- a/classroom/src/styles.scss
+++ b/classroom/src/styles.scss
@@ -17,12 +17,12 @@
 //  If you don't need the default component typographies but still want the hierarchy styles,
 //  you can delete this line and instead use:
 //    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
-@include mat.all-legacy-component-typographies();
-@include mat.legacy-core();
+@include mat.all-component-typographies();
+@include mat.core();
 
 //@import "@angular/material/prebuilt-themes/indigo-pink.css";
 @import 'cmu-app-theme';
-@include mat.all-legacy-component-themes($cmu-theme);
+@include mat.all-component-themes($cmu-theme);
 
 .cluster_id {
   background: $cmu-core-grey;
