[fix] lint errors, pydantic 2 upgrade, groups
Fixes a bunch of small lint errors in python and javascript.
Migrates to using pydantic 2.
Fixes grouping, likely a pandas upgrade source of issue, dropping unused
dimension and lat columns fixes it.

--- a/classroom/src/app/text-view/text-view.component.scss
+++ b/classroom/src/app/text-view/text-view.component.scss
@@ -18,11 +18,12 @@
   background-color: $cmu-core-grey;
 }
 .tree {
-  ul, li {
-  margin-top: 0;
-  margin-bottom: 0;
-  list-style-type: none;
-}
+  ul,
+  li {
+    margin-top: 0;
+    margin-bottom: 0;
+    list-style-type: none;
+  }
 }
 .tree-node {
   display: flex;
